Initial commit: resume website

--- a/index.html
+++ b/index.html
@@ -1,33 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Saidou Touray - Resume</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>Saidou Touray</h1>
-    <p><strong>Software Engineer | Based in NYC</strong></p>
+    <header>
+      <h1>Saidou Touray</h1>
+      <p>Bronx, NY | 929-694-5162 | <a href="mailto:saidoutouray538@gmail.com">saidoutouray538@gmail.com</a></p>
+    </header>
 
-    <h2>Contact</h2>
-    <p>Email: you@example.com</p>
-    <p>GitHub: github.com/yourusername</p>
+    <section>
+      <h2>Education</h2>
+      <p>
+        <strong>Exploration Academy</strong> Bronx, NY<br>
+        <em>September 2023 - June 2024</em>
+      </p>
+      <p>
+        <strong>Pathways to Graduation</strong> Bronx, NY<br>
+        <em>September 2024 - June 2025</em>
+      </p>
+    </section>
 
-    <h2>Skills</h2>
-    <ul>
-      <li>HTML, CSS, JavaScript</li>
-      <li>React, Node.js</li>
-      <li>Python, SQL</li>
-    </ul>
+    <section>
+      <h2>Experience</h2>
+      <p>
+        <strong>New Settlement Youth Build</strong> Bronx, NY<br>
+        <em>Construction Intern | Dec 2024 Present</em>
+      </p>
+      <ul>
+        <li>Gained hands-on experience in carpentry, electrical, and plumbing trades.</li>
+        <li>Collaborated to complete construction projects, demonstrating teamwork and problem-solving.</li>
+        <li>Applied OSHA regulations and safety protocols, reducing accident risk.</li>
+        <li>Participated in leadership and career readiness workshops.</li>
+      </ul>
 
-    <h2>Experience</h2>
-    <p><strong>Software Intern</strong> — Tech Company, 2024</p>
-    <p>Worked on frontend features and bug fixes.</p>
+      <p>
+        <strong>E-CMT (Bronx Community College)</strong> Bronx, NY<br>
+        <em>Fellow (Stipend) | Feb 2025 - Present</em>
+      </p>
+      <ul>
+        <li>Trained in Building Science Fundamentals: energy use, efficiency, and sustainable systems.</li>
+        <li>Learned energy measurement, water systems, and weatherization techniques.</li>
+        <li>Built skills in algebra, geometry, and Excel for energy data and building assessments.</li>
+      </ul>
+    </section>
 
-    <h2>Education</h2>
-    <p>Bronx Community College — Building Science, 2025</p>
+    <section>
+      <h2>Certifications</h2>
+      <ul>
+        <li>OSHA 30 & OSHA 10 <em>(as of January 2025)</em></li>
+        <li>Site Safety Training <em>(as of February 2025)</em></li>
+        <li>NCCER <em>(as of May 2025)</em></li>
+        <li>NRF <em>(as of June 2025)</em></li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Extra Curricular Activities</h2>
+      <ul>
+        <li>Robotics</li>
+        <li>Coding</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Skills & Interests</h2>
+      <ul>
+        <li>HTML & CSS</li>
+        <li>Python (Beginner)</li>
+        <li>Construction</li>
+      </ul>
+    </section>
   </div>
 </body>
 </html>
