Update Resume and add About me section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h2>Experience</h2>
       <p>
         <strong>New Settlement Youth Build</strong> Bronx, NY<br>
-        <em>Construction Intern | Dec 2024 Present</em>
+        <em>Construction Intern | Dec 2024 - Present</em>
       </p>
       <ul>
         <li>Gained hands-on experience in carpentry, electrical, and plumbing trades.</li>
@@ -74,6 +74,16 @@
         <li>Python (Beginner)</li>
         <li>Construction</li>
       </ul>
+    </section>
+
+    <section>
+      <h2>About Me</h2>
+       <p>
+        I'm Saidou Touray, a motivated and detail-oriented individual based in Bronx, NY. 
+        I have a passion for learning and growth, with a focus on technology, education, and career readiness. 
+        I'm currently enrolled at Pathways to Graduation and have completed coursework at Exploration Academy. 
+        I created this website to showcase my resume and projects as I pursue career opportunities in IT, customer service, or administration.
+      </p>
     </section>
   </div>
 </body>
