Add Security Guard License to Certifications section

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <li>Site Safety Training <em>(as of February 2025)</em></li>
         <li>NCCER <em>(as of May 2025)</em></li>
         <li>NRF <em>(as of June 2025)</em></li>
+        <li>Security Guard License, New York State-(Expires Aug 2027)</li>
       </ul>
     </section>
 
